--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "salary-thing",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
-  },
-  "dependencies": {
-    "date-fns": "^2.29.3",
-    "date-holidays": "^3.16.7",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.37.0",
-    "zod": "^3.18.0"
-  },
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.6",
-    "typescript": "^4.8.4"
-  }
+	"name": "salary-thing",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev",
+		"lint": "next lint",
+		"start": "next start",
+		"format": "prettier --write \"**/*.{ts,tsx,json,js,cjs,mjs}\""
+	},
+	"dependencies": {
+		"date-fns": "^2.29.3",
+		"date-holidays": "^3.16.7",
+		"next": "12.3.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.37.0",
+		"zod": "^3.18.0"
+	},
+	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^3.3.0",
+		"@types/node": "18.0.0",
+		"@types/react": "18.0.14",
+		"@types/react-dom": "18.0.5",
+		"@typescript-eslint/eslint-plugin": "^5.33.0",
+		"@typescript-eslint/parser": "^5.33.0",
+		"autoprefixer": "^10.4.7",
+		"eslint": "8.22.0",
+		"eslint-config-next": "12.3.1",
+		"postcss": "^8.4.14",
+		"prettier": "^2.7.1",
+		"prettier-plugin-tailwindcss": "^0.1.13",
+		"tailwindcss": "^3.1.6",
+		"typescript": "^4.8.4"
+	}
 }
