--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.37.0",
+		"tabler-icons-react": "^1.55.0",
 		"zod": "^3.18.0"
 	},
 	"devDependencies": {
