--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "salary-thing",
+	"name": "utils",
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
@@ -11,28 +11,28 @@
 	},
 	"dependencies": {
 		"date-fns": "^2.29.3",
-		"date-holidays": "^3.16.7",
-		"next": "12.3.1",
+		"date-holidays": "^3.19.0",
+		"next": "13.2.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-hook-form": "^7.37.0",
-		"tabler-icons-react": "^1.55.0",
-		"zod": "^3.18.0"
+		"react-hook-form": "^7.43.7",
+		"tabler-icons-react": "^1.56.0",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@trivago/prettier-plugin-sort-imports": "^3.3.0",
-		"@types/node": "18.0.0",
-		"@types/react": "18.0.14",
-		"@types/react-dom": "18.0.5",
-		"@typescript-eslint/eslint-plugin": "^5.33.0",
-		"@typescript-eslint/parser": "^5.33.0",
-		"autoprefixer": "^10.4.7",
-		"eslint": "8.22.0",
-		"eslint-config-next": "12.3.1",
-		"postcss": "^8.4.14",
-		"prettier": "^2.7.1",
-		"prettier-plugin-tailwindcss": "^0.1.13",
-		"tailwindcss": "^3.1.6",
-		"typescript": "^4.8.4"
+		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
+		"@types/node": "18.15.3",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.55.0",
+		"@typescript-eslint/parser": "^5.55.0",
+		"autoprefixer": "^10.4.14",
+		"eslint": "8.36.0",
+		"eslint-config-next": "13.2.4",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.4",
+		"prettier-plugin-tailwindcss": "^0.2.5",
+		"tailwindcss": "^3.2.7",
+		"typescript": "^5.0.2"
 	}
 }
