--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "next dev",
 		"lint": "next lint",
 		"start": "next start",
-		"format": "prettier --write \"**/*.{ts,tsx,json,js,cjs,mjs}\""
+		"format": "prettier --write \"**/*.{ts,tsx,json,js,cjs,mjs}\"",
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"date-fns": "^2.29.3",
