--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
 	"name": "utils",
-	"version": "0.0.0",
 	"private": true,
+	"version": "0.0.0",
+	"type": "module",
 	"scripts": {
-		"build": "next build",
-		"dev": "next dev",
-		"lint": "next lint",
-		"start": "next start",
-		"format": "prettier --write \"**/*.{ts,tsx,json,js,cjs,mjs}\"",
-		"typecheck": "tsc --noEmit"
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
 	},
 	"dependencies": {
-		"date-fns": "^2.29.3",
-		"date-holidays": "^3.19.0",
-		"next": "13.2.4",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-hook-form": "^7.43.9",
-		"tabler-icons-react": "^1.56.0",
-		"zod": "^3.21.4"
+		"date-fns": "^2.30.0",
+		"date-holidays": "^3.19.2",
+		"framer-motion": "^10.12.16",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.44.2",
+		"react-router-dom": "^6.11.2",
+		"tabler-icons-react": "^1.56.0"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
-		"@types/node": "18.15.11",
-		"@types/react": "18.0.31",
-		"@types/react-dom": "18.0.11",
-		"@typescript-eslint/eslint-plugin": "^5.57.0",
-		"@typescript-eslint/parser": "^5.57.0",
+		"@types/react": "^18.0.37",
+		"@types/react-dom": "^18.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.59.0",
+		"@typescript-eslint/parser": "^5.59.0",
+		"@vitejs/plugin-react-swc": "^3.0.0",
 		"autoprefixer": "^10.4.14",
-		"eslint": "8.37.0",
-		"eslint-config-next": "13.2.4",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.7",
-		"prettier-plugin-tailwindcss": "^0.2.6",
-		"tailwindcss": "^3.3.1",
-		"typescript": "^5.0.3"
+		"eslint": "^8.38.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.3.4",
+		"postcss": "^8.4.24",
+		"prettier": "^2.8.8",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"tailwindcss": "^3.3.2",
+		"typescript": "^5.0.2",
+		"vite": "^4.3.9"
 	}
 }
