--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,25 @@
 {
-	"compilerOptions": {
-		"target": "es5",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
-		"incremental": true,
-		"downlevelIteration": true,
-		"baseUrl": ".",
-		"paths": {
-			"~*": ["./src/*"]
-		},
-		"strict": true,
-		"noUncheckedIndexedAccess": true,
-		"allowUnreachableCode": false,
-		"allowUnusedLabels": false,
-		"strictFunctionTypes": true,
-		"strictNullChecks": true,
-		"strictBindCallApply": true,
-		"strictPropertyInitialization": true,
-		"noUnusedLocals": true,
-		"noImplicitAny": true,
-		"noImplicitOverride": true,
-		"noImplicitReturns": false,
-		"noImplicitThis": true,
-		"noPropertyAccessFromIndexSignature": false,
-		"noFallthroughCasesInSwitch": true,
-		"useUnknownInCatchVariables": false,
-		"importsNotUsedAsValues": "error",
-		"ignoreDeprecations": "5.0"
-	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
-	"exclude": ["node_modules"]
+  "compilerOptions": {
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
